--- a/src/Backend/MarkBartha.HarvestDemo.OrchardCore.Web/appsettings.json
+++ b/src/Backend/MarkBartha.HarvestDemo.OrchardCore.Web/appsettings.json
@@ -1,9 +1,4 @@
 {
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
+  "OrchardCore": {
+  }
 }
