Removing SolutionDir from the MsBuild pipeline

--- a/src/Backend/MarkBartha.HarvestDemo.OrchardCore.Theme/MarkBartha.HarvestDemo.OrchardCore.Theme.csproj
+++ b/src/Backend/MarkBartha.HarvestDemo.OrchardCore.Theme/MarkBartha.HarvestDemo.OrchardCore.Theme.csproj
@@ -31,7 +31,7 @@
       <Content Include="Views\_ViewImports.cshtml" />
     </ItemGroup>
 
-    <Import Project="$(SolutionDir)src\Shared\MarkBartha.HarvestDemo.Assets\Targets\CopyAssets.targets" />
-    <Import Project="$(SolutionDir)src\Shared\MarkBartha.HarvestDemo.Assets\Targets\RunTailwindBuild.targets" />
+    <Import Project="$(MSBuildThisFileDirectory)..\..\Shared\MarkBartha.HarvestDemo.Assets\Targets\CopyAssets.targets" />
+    <Import Project="$(MSBuildThisFileDirectory)..\..\Shared\MarkBartha.HarvestDemo.Assets\Targets\RunTailwindBuild.targets" />
 
 </Project>
