--- a/src/Shared/MarkBartha.HarvestDemo.Assets/MarkBartha.HarvestDemo.Assets.csproj
+++ b/src/Shared/MarkBartha.HarvestDemo.Assets/MarkBartha.HarvestDemo.Assets.csproj
@@ -10,7 +10,7 @@
         <LibManRestoreCommand Condition="'$(LibManRestoreCommand)' == ''">dotnet tool run libman restore</LibManRestoreCommand>
         <LibManRestoreWorkingDirectory Condition="'$(LibManRestoreWorkingDirectory)' == ''">$([MSBuild]::EnsureTrailingSlash('$(MSBuildProjectDirectory)'))</LibManRestoreWorkingDirectory>
         <LibManRestoreJson Condition="'$(LibManRestoreJson)' == ''">$(LibManRestoreWorkingDirectory)libman.json</LibManRestoreJson>
-        <LibManRestoreStamp Condition="'$(LibManRestoreStamp)' == ''">$(MSBuildProjectExtensionsPath)libman.restore.stamp</LibManRestoreStamp>
+        <LibManRestoreStamp Condition="'$(LibManRestoreStamp)' == ''">$(LibManRestoreWorkingDirectory)obj\libman.restore.stamp</LibManRestoreStamp>
     </PropertyGroup>
 
     <ItemGroup>
