--- a/src/Frontend/MarkBartha.HarvestDemo.App.Maui/MarkBartha.HarvestDemo.App.Maui.csproj
+++ b/src/Frontend/MarkBartha.HarvestDemo.App.Maui/MarkBartha.HarvestDemo.App.Maui.csproj
@@ -66,6 +66,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)"/>
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.8"/>
         <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.8"/>
+        <PackageReference Include="StrawberryShake.Blazor" Version="15.1.11" />
     </ItemGroup>
 
     <ItemGroup>
