Adding ToDos module and REST API

--- a/src/Backend/MarkBartha.HarvestDemo.OrchardCore.Web/MarkBartha.HarvestDemo.OrchardCore.Web.csproj
+++ b/src/Backend/MarkBartha.HarvestDemo.OrchardCore.Web/MarkBartha.HarvestDemo.OrchardCore.Web.csproj
@@ -23,7 +23,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\MarkBartha.HarvestDemo.OrchardCore.Theme\MarkBartha.HarvestDemo.OrchardCore.Theme.csproj" />
+      <ProjectReference Include="..\Modules\MarkBartha.HarvestDemo.OrchardCore.ToDos\MarkBartha.HarvestDemo.OrchardCore.ToDos.csproj" />
+      <ProjectReference Include="..\Themes\MarkBartha.HarvestDemo.OrchardCore.Theme\MarkBartha.HarvestDemo.OrchardCore.Theme.csproj" />
     </ItemGroup>
 
 </Project>
