--- a/src/Frontend/MarkBartha.HarvestDemo.App.Maui/MarkBartha.HarvestDemo.App.Maui.csproj
+++ b/src/Frontend/MarkBartha.HarvestDemo.App.Maui/MarkBartha.HarvestDemo.App.Maui.csproj
@@ -18,6 +18,7 @@
         <UseMaui>true</UseMaui>
         <SingleProject>true</SingleProject>
         <EnableDefaultCssItems>false</EnableDefaultCssItems>
+        <Nullable>disable</Nullable>
 
         <!-- Display name -->
         <ApplicationTitle>Orchard Harvest 2025 Demo App</ApplicationTitle>
