--- a/src/Frontend/MarkBartha.HarvestDemo.App.Maui/Platforms/iOS/Info.plist
+++ b/src/Frontend/MarkBartha.HarvestDemo.App.Maui/Platforms/iOS/Info.plist
@@ -28,5 +28,14 @@
     </array>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/appicon.appiconset</string>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>harvestdemo</string>
+            </array>
+        </dict>
+    </array>
 </dict>
 </plist>
